--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:css": "wp-scripts lint-style",
     "lint:js": "wp-scripts lint-js",
     "start": "wp-scripts start",
+    "start:hot": "wp-scripts start --hot",
     "packages-update": "wp-scripts packages-update"
   },
   "author": "Woostify",
