--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@wordpress/block-editor": "^8.1.0",
     "@wordpress/blocks": "^11.2.0",
-    "@wordpress/i18n": "^4.3.0"
+    "@wordpress/i18n": "^4.3.0",
+    "classnames": "^2.3.1"
   },
   "devDependencies": {
     "@wordpress/dependency-extraction-webpack-plugin": "^3.3.0",
