--- a/package.json
+++ b/package.json
@@ -2,32 +2,44 @@
   "name": "woostify-block",
   "version": "1.0.0",
   "description": "Advanced blocks for Gutenberg editor",
-  "main": "build/index.js",
+  "main": "dist/blocks.js",
   "scripts": {
     "build": "wp-scripts build",
+    "build:new": "wp-scripts build src/blocks.js src/sidebar.js --output-path=dist",
     "format": "wp-scripts format",
     "lint:css": "wp-scripts lint-style",
     "lint:js": "wp-scripts lint-js",
     "start": "wp-scripts start",
+    "start:new": "wp-scripts start src/blocks.js src/sidebar.js --output-path=dist",
     "start:hot": "wp-scripts start --hot",
     "packages-update": "wp-scripts packages-update"
   },
   "author": "Woostify",
   "license": "GPL-2.0-or-later",
   "dependencies": {
-    "@wordpress/block-editor": "^8.5.1",
-    "@wordpress/blocks": "^11.5.1",
-    "@wordpress/i18n": "^4.6.0",
     "classnames": "^2.3.1"
   },
   "devDependencies": {
-    "@wordpress/dependency-extraction-webpack-plugin": "^3.4.1",
+    "@wordpress/api-fetch": "^6.3.0",
+    "@wordpress/block-editor": "^6.0.0",
+    "@wordpress/blocks": "^9.0.0",
+    "@wordpress/components": "^14.0.0",
+    "@wordpress/compose": "^4.0.0",
+    "@wordpress/data": "^5.0.0",
+    "@wordpress/element": "^3.0.0",
+    "@wordpress/hooks": "^3.0.0",
+    "@wordpress/i18n": "^4.0.0",
     "@wordpress/scripts": "^22.4.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.5.1",
-    "mini-css-extract-plugin": "^2.4.4",
-    "sass-loader": "^12.3.0",
-    "style-loader": "^3.3.1",
-    "webpack-livereload-plugin": "^3.0.2"
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify-es": "^3.0.0",
+    "gulp-wp-pot": "^2.5.0",
+    "gulp-zip": "^4.2.0",
+    "node-sass": "^7.0.1",
+    "postcss": "^8.4.12",
+    "postcss-loader": "^6.2.1"
   }
 }
