--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "@wordpress/scripts": "^22.4.0",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^3.0.0",
     "gulp-wp-pot": "^2.5.0",
+    "gulp-css-globbing": "^0.2.2",
     "gulp-zip": "^4.2.0",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.12",
