--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.3",
+		"@heroicons/react": "^2.0.12",
 		"@types/wordpress__block-editor": "^7.0.0",
 		"@wordpress/api-fetch": "^6.16.0",
 		"@wordpress/block-editor": "^10.2.0",
