--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 		"lodash": "^4.17.21",
 		"postcss": "^8.4.16",
 		"sass": "^1.54.8",
-		"tailwindcss": "^3.2.0"
+		"styled-jsx": "^5.1.0",
+		"tailwindcss": "^3.2.0",
+		"twin.macro": "^2.8.2"
 	}
 }
