--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"color-rgba": "^2.4.0",
 		"lodash": "^4.17.21",
 		"postcss": "^8.4.16",
+		"react-use": "^17.4.0",
 		"sass": "^1.54.8",
 		"styled-jsx": "^5.1.0",
 		"tailwindcss": "^3.2.0",
