--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@wordpress/api-fetch": "^6.16.0",
 		"@wordpress/block-editor": "^10.2.0",
 		"@wordpress/components": "^21.2.0",
+		"@wordpress/core-data": "^5.4.0",
 		"@wordpress/element": "^4.17.0",
 		"@wordpress/hooks": "^3.19.0",
 		"@wordpress/i18n": "^4.16.0",
