--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "woostify-conversion-blocks",
+	"name": "woostify-blocks",
 	"version": "0.1.0",
 	"description": "Example static block scaffolded with Create Block tool.",
 	"author": "The WordPress Contributors",
@@ -26,13 +26,13 @@
 		"@heroicons/react": "^2.0.12",
 		"@types/lodash": "^4.14.186",
 		"@types/wordpress__block-editor": "^7.0.0",
-		"@wordpress/api-fetch": "^6.16.0",
-		"@wordpress/block-editor": "^10.2.0",
-		"@wordpress/components": "^21.2.0",
+		"@wordpress/api-fetch": "^6.18.0",
+		"@wordpress/block-editor": "^10.4.0",
+		"@wordpress/components": "^22.0.0",
 		"@wordpress/core-data": "^5.4.0",
-		"@wordpress/element": "^4.17.0",
-		"@wordpress/hooks": "^3.19.0",
-		"@wordpress/i18n": "^4.16.0",
+		"@wordpress/element": "^4.19.0",
+		"@wordpress/hooks": "^3.21.0",
+		"@wordpress/i18n": "^4.21.0",
 		"autoprefixer": "^10.4.8",
 		"classnames": "^2.3.2",
 		"color-rgba": "^2.4.0",
@@ -40,8 +40,6 @@
 		"postcss": "^8.4.16",
 		"react-use": "^17.4.0",
 		"sass": "^1.54.8",
-		"styled-jsx": "^5.1.0",
-		"tailwindcss": "^3.2.0",
-		"twin.macro": "^2.8.2"
+		"tailwindcss": "^3.2.0"
 	}
 }
