duypdate testimonial block

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
 		"@emotion/core": "^11.0.0",
 		"@emotion/react": "^11.10.4",
 		"@emotion/styled": "^11.10.4",
+		"@glidejs/glide": "^3.6.0",
 		"@headlessui/react": "^1.7.3",
 		"@heroicons/react": "^2.0.12",
+		"@types/glidejs__glide": "^3.4.3",
 		"@types/jquery": "^3.5.14",
 		"@types/lodash": "^4.14.186",
 		"@types/wordpress__block-editor": "^7.0.0",
