--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
 		"@emotion/core": "^11.0.0",
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
-		"@glidejs/glide": "^3.6.0",
 		"@headlessui/react": "^1.7.4",
 		"@heroicons/react": "^2.0.13",
-		"@types/glidejs__glide": "^3.6.0",
 		"@types/jquery": "^3.5.14",
 		"@types/lodash": "^4.14.191",
+		"@types/react-slick": "^0.23.10",
 		"@types/react-window": "^1.8.5",
 		"@types/wordpress__block-editor": "^7.0.0",
 		"@wordpress/api-fetch": "^6.19.0",
@@ -43,9 +42,11 @@
 		"color-rgba": "^2.4.0",
 		"lodash": "^4.17.21",
 		"postcss": "^8.4.19",
+		"react-slick": "^0.29.0",
 		"react-use": "^17.4.0",
 		"react-window": "^1.8.8",
 		"sass": "^1.56.1",
+		"slick-carousel": "^1.8.1",
 		"tailwindcss": "^3.2.4"
 	}
 }
