--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"start": "wp-scripts start"
 	},
 	"devDependencies": {
+		"@types/google.maps": "^3.51.0",
 		"@types/node": "^18.11.11",
 		"@wordpress/scripts": "^24.6.0"
 	},
@@ -22,6 +23,7 @@
 		"@emotion/core": "^11.0.0",
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
+		"@googlemaps/react-wrapper": "^1.1.35",
 		"@headlessui/react": "^1.7.4",
 		"@heroicons/react": "^2.0.13",
 		"@types/jquery": "^3.5.14",
@@ -47,6 +49,7 @@
 		"react-window": "^1.8.8",
 		"sass": "^1.56.1",
 		"slick-carousel": "^1.8.1",
-		"tailwindcss": "^3.2.4"
+		"tailwindcss": "^3.2.4",
+		"use-deep-compare-effect": "^1.8.1"
 	}
 }
