--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@wordpress/scripts": "^25.0.0"
 	},
 	"dependencies": {
+		"@apollo/client": "^3.7.3",
 		"@emotion/core": "^11.0.0",
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
@@ -43,6 +44,7 @@
 		"axios": "^1.2.2",
 		"classnames": "^2.3.2",
 		"color-rgba": "^2.4.0",
+		"graphql": "^16.6.0",
 		"lodash": "^4.17.21",
 		"postcss": "^8.4.20",
 		"react-hot-toast": "^2.4.0",
