--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"react-use": "^17.4.0",
 		"react-window": "^1.8.8",
 		"sass": "^1.57.1",
+		"scroll-snap-slider": "barthy-koeln/scroll-snap-slider",
 		"slick-carousel": "^1.8.1",
 		"tailwindcss": "^3.2.4",
 		"use-deep-compare-effect": "^1.8.1"
