update fix disable deprecated --- not merge

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ yarn-error.log*
 coverage
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
+build
 build/Release
 # Dependency directories
 node_modules/
