--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"copy-to-clipboard": "^3.3.3",
 		"graphql": "^16.6.0",
 		"lodash": "^4.17.21",
+		"lucide-react": "^0.548.0",
 		"postcss": "^8.4.21",
 		"react-hot-toast": "^2.4.0",
 		"react-slick": "^0.29.0",
